--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -212,7 +212,7 @@ em
 	
 // technology.html section
 .tech-logo
-	width: 300px
+	//width: 300px
 	height: 70px
 	
 .bottom-content-block
@@ -232,11 +232,23 @@ em
 	left: 0
 	
 #mean-logo, #net-logo, #wordpress-logo
-	padding-top: $content-padding
-	padding-bottom: $content-padding
+	padding-top: $content-padding/2
+	padding-bottom: $content-padding/2
 	
 .tech-logo
+	// Todo: change the 3 logos to have the same height and use white space to fill the green area
+	width: 100%
+	height: 100%
 	padding: 10px
+	height: 80px
+	
+#mean-logo:not([class*="logo-highlight"]):hover, #net-logo:not([class*="logo-highlight"]):hover, #wordpress-logo:not([class*="logo-highlight"]):hover
+	//background-color: $darker-green
+	background-color: adjust-lightness($offwhite, -10)
+	
+#mean-logo:active, #net-logo:active, #wordpress-logo:active
+	//background-color: adjust-lightness($offwhite, -10)
+	//background-color: $darker-green
 	
 .logo-highlight
 	background-color: $darker-green
@@ -247,6 +259,7 @@ em
 	background-color: $offwhite
 	
 .middle-content-tech
+	height: 120px
 	background-color: $offwhite
 	
 .rel-container
