--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -271,6 +271,33 @@ em
 	background-size: 100%
 	height: $header-height
 	
+// contact.html section
+.header-image-contact
+	background: url(../images/bamboo-forest.jpg)
+	background-size: 100%
+	height: $header-height
+	
+.caption-text-contact
+	font-family: $font-nav
+	font-size: 24px
+	font-weight: 700
+	margin-left: 10px
+	margin-top: 10px
+	text-align: center
+	
+.description-text-contact, .contact-form
+	margin: 15px 25px 25px 15px
+	font-family: $font-description
+	font-size: 14px
+	line-height: 24px
+	text-align: center
+	
+.contact-block
+	margin-bottom: 40px
+	
+.send-button
+	text-align: left
+	
 // Very Small Screens
 @media screen and (max-width: 600px)
 	.main-caption-text, .intro
